# Timesweeper

./: .gitignore  Dockerfile  LICENSE  LICENSE.gen  Makefile  Notes.md  README.md  Snakefile  aliases.sh  ashbya_analysis.yml  blinx.yaml  blinx.yml  combineMSFileDir.py  meta.yaml  mongolian_samps.yml  pytest.ini  requirements.txt  runAndParseSlim.py  runAndParseSlimTEST.py  runCmdAsJobTEST.py  setup.cfg  setup.py  test.vec  testout  train_timesweeper.7585054.err  train_timesweeper.7585054.out  utils.py  yeet.out
empirical_model/: Online Table 1 Newly reported ancient individuals.csv  Online Table 5 Newly reported dates.csv  Snakefile  filtered_samps.csv  inject_slim.py  msCmdToSlimScript.py  plot_msmc.py
examples/: example_config.yaml  example_model.slim
mongolian_model/: Snakefile  msCmdToSlimScript.py  plot_msmc.py
onePop/: 02a_formatNpz_ali.py  keras_CNN_loadNrun.py  keras_DNN_loadNrun.py  runAndParseSlim.py
onePop2CAT/: 02a_formatNpz_ali.py  02c_formatNpz_haps.py  02d_formatNpz_jsfs.py
onePop2CAT_OLDSIM/: 02b_formatNpz_sfs.py
simple_sims/: Snakefile  blinx.py  make_sims.sb  make_sims_vcf.sb  quickpipe.sh  runAndParseSlim.py  sim_haplotypes.py
slimfiles/: iain_demography.slim  onePop-adaptiveIntrogression-onePopAdaptiveIntro.slim  onePop-adaptiveIntrogression.slim  onePop-selectiveSweep-10Samp20Ind20Int-sweep.slim  onePop-selectiveSweep.slim  twoPop-adaptiveIntrogression.slim  twoPop-selectiveSweep.slim
src/: FIT.py  FIt.py  Snakefile  allele_freq_mat.py  allele_freq_net.py  bin_samps.py  blinx.py  classify_windows.py  clean_msOut.py  create_haplotype_ms.py  empirical_haplotypes.py  example.yaml  example_slim_injection_config.yaml  example_timesweeper_config.yaml  feder_fit.py  feder_method.py  frequency_increment_test.py  hap_networks.py  (+33 more)
(+282 files in other folders)
