[metadata]
name = Timesweeper
version = 1.1.0
author = Logan Whitehouse
author_email = lswhiteh@unc.edu
description = A tool for detecting positive selective sweeps using time-series genomcis data.
long_description = file: README.md, LICENSE
url = https://github.com/SchriderLab/timeSeriesSweeps
project_urls = 
    Issues = https://github.com/SchriderLab/timeSeriesSweeps/issues
    GitHub = https://github.com/SchriderLab/timeSeriesSweeps
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    population genetics
    deep learning
    positive selection
license = MIT

[options]
python_requires = >=3.6
include_package_data = True
packages = timesweeper


[options.entry_points]
console_scripts =
    timesweeper = timesweeper.cli:ts_main






