[metadata]
name = Timesweeper
version = 1.1.2
author = Logan Whitehouse
author_email = lswhiteh@unc.edu
description = A tool for detecting positive selective sweeps using time-series genomcis data.
url = https://github.com/SchriderLab/Timesweeper
project_urls = 
    Issues = https://github.com/SchriderLab/Timesweeper/issues
    GitHub = https://github.com/SchriderLab/Timesweeper
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    population genetics
    deep learning
    positive selection
license = MIT

[options]
python_requires = >=3.6
include_package_data = True
packages = timesweeper
install_requires = 
    numpy
    pandas
    tensorflow
    scikit-learn
    scikit-allel
    tqdm
    matplotlib
    scipy

[options.entry_points]
console_scripts =
    timesweeper = timesweeper.cli:ts_main






